<resources>
    <string name="app_name">AndroidSample</string>
    <string name="name">Name</string>
    <string name="owner_name">Owner Name</string>
    <string name="repository_url">Repository URL</string>
    <string name="creation_date">Creation Date</string>
    <string name="last_update_date">Last Update Date</string>
    <string name="project_id">Project ID</string>
    <string name="watchers">Watchers</string>
    <string name="forks">Forks</string>
    <string name="open_issues">Open Issues</string>
    <string name="no_data_available">No Data Available</string>
    <string name="no_data_connectivity">Data Connectivity not available!</string>
</resources>
