<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activity.FirstScreenActivity">

    <TextView
        style="@style/ItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/ItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/owner_name" />

    <TextView
        android:id="@+id/owner_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/ItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repository_url" />

    <TextView
        android:id="@+id/repository_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/ItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creation_date" />

    <TextView
        android:id="@+id/creation_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        style="@style/ItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_update_date" />

    <TextView
        android:id="@+id/last_update_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/ItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_id" />

    <TextView
        android:id="@+id/project_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/ItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watchers" />

    <TextView
        android:id="@+id/watchers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/ItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forks" />

    <TextView
        android:id="@+id/forks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/ItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_issues" />

    <TextView
        android:id="@+id/open_issues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>